--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@
                 <img src="images/logo/logo.png"
                     alt="Logo escuela de verano Murialdo"
                     class="absolute top-1/2 -translate-y-1/2 drop-shadow-[0_0_6px_rgba(0,0,0,0.8)] z-10 w-96">
-                <h1 class="font-atma absolute bottom-16 z-10 text-primary text-outline-4 w-full py-4 rounded-3xl text-center font-extrabold text-3xl md:text-6xl">
+                <h1 class="font-atma absolute bottom-16 z-10 text-primary text-outline-2 sm:text-outline-3 lg:text-outline-4 w-full py-4 rounded-3xl text-center font-extrabold text-3xl md:text-4xl lg:text-6xl">
                     Escuela de verano en Mendoza
                 </h1>
             </div>
