--- a/src/components/blog/NewsGrid.astro
+++ b/src/components/blog/NewsGrid.astro
@@ -33,7 +33,7 @@ function truncarTexto(texto: string, maxLength: number = 150): string {
 ---
 
 <section class="py-8 container mx-auto">
-    <section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+    <section class="px-4 mx-auto max-w-7xl py-20 lg:px-6">
         <h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center mb-4">Noticias</h2>
         <p class="mt-2 text-white text-xl text-center mb-12">Mantente informado sobre las últimas novedades de nuestra escuela de verano</p>
         
