--- a/src/components/galeria/AlbumGrid.astro
+++ b/src/components/galeria/AlbumGrid.astro
@@ -27,7 +27,7 @@ function formatearFecha(fecha: string): string {
 ---
 
 <section class="py-8 container mx-auto">
-    <section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+    <section class="px-4 mx-auto max-w-7xl py-20 lg:px-6">
         <h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center mb-4">Galería de Fotos</h2>
         <p class="mt-2 text-white text-xl text-center mb-12">Revive los mejores momentos de nuestra escuela de verano</p>
         
