--- a/src/components/index/Divisions.astro
+++ b/src/components/index/Divisions.astro
@@ -13,7 +13,7 @@ try {
 ---
 
 <section class="py-8 container mx-auto" id="edades">
-    <section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+    <section class="px-4 mx-auto max-w-7xl py-16 sm:py-20 lg:px-6">
         <h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center">Divisiones por edades</h2>
         <p class="mt-2 text-white text-xl text-center">Destinado para chicos y chicas entre 3 y 14 años. Para los dos turnos las divisiones de los chicos en los grupos tendrá flexibilidad para hacer todas las modificaciones que resulten necesarias para los padres.</p>
     </section>
