--- a/src/components/actividades/AllActivities.astro
+++ b/src/components/actividades/AllActivities.astro
@@ -65,7 +65,7 @@ function getBentoClass(actividad: Actividad, index: number): { gridClass: string
 ---
 
 <section class="py-8 container mx-auto">
-    <section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+    <section class="px-4 mx-auto max-w-7xl py-20 lg:px-6">
         <h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center mb-4">Todas las Actividades</h2>
         <p class="mt-2 text-white text-xl text-center mb-12">Descubrí todas las actividades que ofrecemos en nuestra escuela de verano</p>
         
