--- a/src/components/equipo/TeamGrid.astro
+++ b/src/components/equipo/TeamGrid.astro
@@ -15,7 +15,7 @@ const equipoOrdenado = [...equipo].sort((a, b) => parseInt(a.Orden) - parseInt(b
 ---
 
 <section class="py-8 container mx-auto">
-    <section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+    <section class="px-4 mx-auto max-w-7xl py-20 lg:px-6">
         <h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center mb-4">Nuestro Equipo</h2>
         <p class="mt-2 text-white text-xl text-center mb-12">Conocé a los profesionales que hacen posible nuestra escuela de verano</p>
         
