--- a/src/components/index/Activities.astro
+++ b/src/components/index/Activities.astro
@@ -1,47 +1,47 @@
 <section class="py-8 container mx-auto" id="actividades">
-    <section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+    <section class="px-4 mx-auto max-w-7xl py-16 sm:py-20 lg:px-6">
         <h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center">Nuestras Actividades</h2>
         <p class="mt-2 text-white text-xl text-center">Mirá las actividades que se realizan en la escuela de verano.</p>
     </section>
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-        <article class="flex gap-6 sm:mb-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 px-4">
+        <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
                 src="images/index/natacion.svg"
                 alt="icono clases de natación"
-                class="w-22 h-auto shrink-0"
+                class="w-22 h-auto shrink-0 max-sm:-mb-6"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Clases de Natación</h3>
                 <p class="text-white text-lg">Se divertirán y aprenderán distintas técnicas de natación, básicas orientadas a la prevención de accidentes y avanzadas orientadas al aprendizaje de los diferentes estilos.</p>
             </div>
         </article>
-        <article class="flex gap-6 sm:mb-6">
+        <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
                 src="images/index/deportes.svg"
                 alt="icono clases multideporte"
-                class="w-22 h-auto shrink-0"
+                class="w-22 h-auto shrink-0 max-sm:-mb-6"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Clases multideporte</h3>
                 <p class="text-white text-lg">Clases especializadas de los diferentes deportes con los que cuenta el club para que vivan la experiencia de probar todos y cada uno.</p>
             </div>
         </article>
-        <article class="flex gap-6">
+        <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
                 src="images/index/campamento.svg"
                 alt="icono campamentos"
-                class="w-22 h-auto shrink-0"
+                class="w-22 h-auto shrink-0 max-sm:-mb-6"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Campamentos</h3>
                 <p class="text-white text-lg">Acampar todo el día con tus compañeros con distintas actividades recreativas y la seguridad que ofrece el club.</p>
             </div>
         </article>
-        <article class="flex gap-6">
+        <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
                 src="images/index/recreativo.svg"
                 alt="icono días especiales"
-                class="w-22 h-auto shrink-0"
+                class="w-22 h-auto shrink-0 max-sm:-mb-6"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Días especiales</h3>
