--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -37,7 +37,7 @@ try {
 	<Breadcrumb title="Contacto" img="/images/temporada.webp" />
 	
 	<section class="container mx-auto py-8">
-		<section class="px-4 mx-auto max-w-7xl sm:py-20 lg:px-6">
+		<section class="px-4 mx-auto max-w-7xl py-20 lg:px-6">
 			<h2 class="font-atma font-bold text-outline-4 text-tertiary text-5xl text-center mb-4">Contactanos</h2>
 			<p class="mt-2 text-white text-xl text-center mb-12">Estamos para ayudarte con cualquier consulta sobre nuestra escuela de verano</p>
 			
