--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const { title, img, filter } = Astro.props;
 ---
-<section class="container mx-auto mt-[130px] sm:mt-[150px] md:mt-[140px] lg:mt-[160px]">
+<section class="container mx-auto mt-[130px] lg:mt-[160px]">
     <div 
         class={`${filter ? "bg-black/40 bg-blend-multiply" : ""} bg-no-repeat bg-cover bg-center h-full w-full rounded-3xl`}
         style={{ backgroundImage: `url(${img})` }}
