--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,7 +3,10 @@ import Layout from '@/layouts/Layout.astro';
 import { noticiasService } from '@/services/strapi';
 import type { Noticia } from '@/types/strapi';
 import { marked } from 'marked';
+import { STRAPI_URL } from 'astro:env/server';
+import { IS_PROD } from 'astro:env/client';
 
+const baseUrl = !IS_PROD ? STRAPI_URL : '';
 
 // Función para formatear fecha
 function formatearFecha(fecha: string): string {
@@ -72,7 +75,7 @@ const preloadImages = [
       {/* Imagen principal */}
       <div class="mb-8 rounded-3xl overflow-hidden border-2 border-secondary">
         <img
-          src={noticia.Imagen.url}
+          src={baseUrl + noticia.Imagen.url}
           alt={noticia.Titulo}
           class="w-full h-auto"
           loading="eager"
