--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -79,6 +79,7 @@ const preloadImages = [
           alt={noticia.Titulo}
           class="w-full h-auto"
           loading="eager"
+          transition:name={noticia.documentId}
         />
       </div>
 
