--- a/src/components/index/FAQ.astro
+++ b/src/components/index/FAQ.astro
@@ -66,7 +66,7 @@ try {
 </section>
 
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('astro:page-load', () => {
         const faqItems = document.querySelectorAll('.faq-item');
         
         faqItems.forEach(item => {
