Optimizar imágenes cambiando formato PNG a WebP y agregar loading="lazy" en todos los componentes

--- a/src/components/index/About.astro
+++ b/src/components/index/About.astro
@@ -4,7 +4,9 @@
         <p class="mt-2 text-white text-xl text-center">Escuela de verano del Club Lonardo Murialdo.</p>
     </section>
     <section class="text-white grid grid-cols-1 lg:grid-cols-2 items-center gap-6 px-4">
-        <img src="/images/index/sobre-nosotros.webp"
+        <img 
+            loading="lazy"
+            src="/images/index/sobre-nosotros.webp"
             alt="About"
             class="rounded-3xl w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
         />
