--- a/src/components/index/CTAInscription.astro
+++ b/src/components/index/CTAInscription.astro
@@ -21,7 +21,7 @@ try {
                     <h2 class="font-atma text-tertiary text-3xl lg:text-4xl xl:text-5xl font-extrabold mb-4 text-outline sm:text-outline-2 lg:text-outline-3">¡Inscripciones abiertas, para todo el público!</h2>
                     <p class="text-white text-base sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">Tenemos promociones para los que se inscriban ahora, contactanos ¡te estamos esperando!</p>
                 </div>
-                <img src="/images/index/inscripciones-abiertas.webp" alt="Inscripciones Abiertas" class="w-96 h-auto sm:h-64 md:h-80 lg:h-96 px-8 -mb-48 xs:-mb-64 max-sm:mt-4" />
+                <img loading="lazy" src="/images/index/inscripciones-abiertas.webp" alt="Inscripciones Abiertas" class="w-96 h-auto sm:h-64 md:h-80 lg:h-96 px-8 -mb-48 xs:-mb-64 max-sm:mt-4" />
             </>
         ) : (
             <>
@@ -29,7 +29,7 @@ try {
                     <h2 class="font-atma text-tertiary text-3xl lg:text-4xl xl:text-5xl font-extrabold mb-4 text-outline sm:text-outline-2 lg:text-outline-3">Las inscripciones aun no están habilitadas</h2>
                     <p class="text-white text-base sm:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">Estamos preparando una temporada inolvidable. Seguinos en nuestras redes para estar al tanto de las novedades.</p>
                 </div>
-                <img src="/images/index/inscripciones-cerradas.webp" alt="Inscripciones Cerradas" class="w-96 h-auto sm:h-64 md:h-80 lg:h-96 px-8 -mb-48 xs:-mb-64 max-sm:mt-4" />
+                <img loading="lazy" src="/images/index/inscripciones-cerradas.webp" alt="Inscripciones Cerradas" class="w-96 h-auto sm:h-64 md:h-80 lg:h-96 px-8 -mb-48 xs:-mb-64 max-sm:mt-4" />
             </>
         )}
     </div>
