--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -19,7 +19,7 @@ const { title, img, filter } = Astro.props;
                     {title}
                 </h1>
             </div>
-            <img loading="lazy" src="/images/logo/logo.png" alt="Logo escuela de verano Murialdo" class="absolute bottom-5 left-12 drop-shadow-[0_0_6px_rgba(255,255,255,.8)] z-10 w-32 md:w-44 h-auto" />
+            <img loading="lazy" src="/images/logo/logo.webp" alt="Logo escuela de verano Murialdo" class="absolute bottom-5 left-12 drop-shadow-[0_0_6px_rgba(255,255,255,.8)] z-10 w-32 md:w-44 h-auto" />
         </div>
         
     </div>
