--- a/src/components/index/Activities.astro
+++ b/src/components/index/Activities.astro
@@ -9,6 +9,7 @@
                 src="images/index/natacion.svg"
                 alt="icono clases de natación"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
+                loading="lazy"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Clases de Natación</h3>
@@ -20,6 +21,7 @@
                 src="images/index/deportes.svg"
                 alt="icono clases multideporte"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
+                loading="lazy"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Clases multideporte</h3>
@@ -31,6 +33,7 @@
                 src="images/index/campamento.svg"
                 alt="icono campamentos"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
+                loading="lazy"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Campamentos</h3>
@@ -42,6 +45,7 @@
                 src="images/index/recreativo.svg"
                 alt="icono días especiales"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
+                loading="lazy"
             />
             <div>
                 <h3 class="font-atma text-secondary text-xl sm:text-2xl font-bold mb-2">Días especiales</h3>
