Corregir rutas de imágenes agregando barra inicial en Hero y Activities

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
     <div class="bg-[url('/images/index/escuela-de-verano.webp')] bg-no-repeat bg-cover bg-center h-full w-full rounded-3xl bg-black/40 bg-blend-multiply">
         <div class="relative w-full">
             <div class="flex justify-center relative h-[calc(100vh-14rem)] mx-5 sm:mx-10 ">
-                <img loading="lazy" src="images/logo/logo.webp"
+                <img loading="lazy" src="/images/logo/logo.webp"
                     alt="Logo escuela de verano Murialdo"
                     class="absolute top-1/2 -translate-y-1/2 drop-shadow-[0_0_6px_rgba(0,0,0,0.8)] z-10 w-96">
                 <h1 class="font-atma absolute bottom-16 z-10 text-primary text-outline-2 sm:text-outline-3 lg:text-outline-4 w-full py-4 rounded-3xl text-center font-extrabold text-3xl md:text-4xl lg:text-6xl">
