--- a/src/components/index/Activities.astro
+++ b/src/components/index/Activities.astro
@@ -6,7 +6,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 px-4">
         <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
-                src="images/index/natacion.svg"
+                src="/images/index/natacion.svg"
                 alt="icono clases de natación"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
                 loading="lazy"
@@ -18,7 +18,7 @@
         </article>
         <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
-                src="images/index/deportes.svg"
+                src="/images/index/deportes.svg"
                 alt="icono clases multideporte"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
                 loading="lazy"
@@ -30,7 +30,7 @@
         </article>
         <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
-                src="images/index/campamento.svg"
+                src="/images/index/campamento.svg"
                 alt="icono campamentos"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
                 loading="lazy"
@@ -42,7 +42,7 @@
         </article>
         <article class="flex flex-col sm:flex-row gap-6 mb-6">
             <img 
-                src="images/index/recreativo.svg"
+                src="/images/index/recreativo.svg"
                 alt="icono días especiales"
                 class="w-22 h-auto shrink-0 max-sm:-mb-6"
                 loading="lazy"
