--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,10 @@ const currentPath = Astro.url.pathname;
 		<meta name="generator" content={Astro.generator} />
 		<!-- Favicons -->
 		<link rel="icon" href="/images/logo/favicon.png" type="image/png" />
+		<!-- Favicon compatibilidad -->
+		<link href="/images/logo/favicons/logox32.png" type="image/png" sizes="32x32" rel="icon" />
+		<link href="/images/logo/favicons/logox16.png" type="image/png" sizes="16x16" rel="icon" />
+		<link href="/images/logo/favicons/logox180.png" rel="apple-touch-icon" sizes="180x180" />
 		<title>{title}</title>
 		
 		<!-- SEO -->
